// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge accepts custom bg and color 1`] = `
.c0 {
  font-size: 16px;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
  background-color: #ffffff;
  color: #7280ed;
  border-radius: 4px;
  display: inline-block;
  font-weight: normal;
  -webkit-letter-spacing: 0.0375em;
  -moz-letter-spacing: 0.0375em;
  -ms-letter-spacing: 0.0375em;
  letter-spacing: 0.0375em;
  line-height: 1.25;
  text-transform: uppercase;
}

<span
  className="c0"
  color="accent"
  fontSize={1}
/>
`;

exports[`Badge renders 1`] = `
.c0 {
  font-size: 16px;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
  background-color: #e42d42;
  color: #ffffff;
  border-radius: 4px;
  display: inline-block;
  font-weight: normal;
  -webkit-letter-spacing: 0.0375em;
  -moz-letter-spacing: 0.0375em;
  -ms-letter-spacing: 0.0375em;
  letter-spacing: 0.0375em;
  line-height: 1.25;
  text-transform: uppercase;
}

<span
  className="c0"
  color="white"
  fontSize={1}
/>
`;
